--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,24 @@
 @import "tailwindcss";
 
+@keyframes fadeSlide {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-page {
+  animation: fadeSlide 0.6s ease-out forwards;
+}
+
+
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #F99AAB;
 }
 
 @theme inline {
@@ -14,13 +30,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #F99AAB;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
